# mlb_pred

./: '  .gitignore  Manifest.toml  Project.toml  executor.sh  pyproject.toml  readme.md  table_init.sh
_output/: 2019_btl_estimates.csv  2019_estimates.csv  2019_home_estimates.csv  2019_mag_estimates.csv  2020_btl_estimates.csv  2020_estimates.csv  2020_home_estimates.csv  2020_mag_estimates.csv  2021_btl_estimates.csv  2021_estimates.csv  2021_home_estimates.csv  2021_mag_estimates.csv  2022_btl_estimates.csv  2022_estimates.csv  2022_home_estimates.csv  2022_mag_estimates.csv  2023_btl_estimates.csv  2023_estimates.csv  2023_home_estimates.csv  2023_mag_estimates.csv  2024_btl_estimates.csv  2024_estimates.csv  2024_home_estimates.csv  2024_mag_estimates.csv  2025_btl_estimates.csv  2025_home_estimates.csv  2025_mag_estimates.csv
db/: twenty_five.db
mlbpred/: DataIngest.py  Model.jl  Model.py  Utils.jl  bt  bt.stan  bt_home  bt_home.stan  bt_mag  bt_mag.stan  btl  btl.stan  btl_home  btl_home.stan  btl_mag  btl_mag.stan  btl_time_variant.stan
src/: db_init.py  fit.jl  fit.py  fit_past_seasons.py  ingest.py  init.py
