[tool.poetry]
name = "mlb-pred"
version = "0.1.0"
description = ""
authors = ["DamonCharlesRoberts <damon.charles.roberts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
duckdb = "^1.1.3"
argparse = "^1.4.0"
mlb-statsapi = "^1.8.1"
polars = "^1.21.0"
pyarrow = "^19.0.0"
loguru = "^0.7.3"
cmdstanpy = "^1.2.5"
plotly = "^6.0.0"
scipy = "^1.15.1"
mlbcolors = "^0.0.1"

[tool.pyright]
reportMissingImports = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
