[project]
name = "mlb-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "cmdstanpy>=1.2.5",
    "duckdb>=1.3.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "mlb-statsapi>=1.9.0",
    "mlbcolors>=0.0.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "xarray>=2025.7.1",
]
